# template-crewai-langchain

./: pyproject.toml
docs/: setup.md
docs/decisions/: index.md
src/api/: Dockerfile  api.py  exts.py
src/api/models/: agents.py  crew.py  manager.py  tasks.py
src/api/tools/: __init__.py  google_tools.py  youtube_tools.py
